# nugget

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  config.yaml  examples.md  lua-test.yaml
.github/workflows/: ci.yml  release.yml
src/: cross_references.rs  interpolation.rs  lua_engine.rs  main.rs  request_processing.rs  types.rs  variable_generation.rs
tests/: integration_tests.rs
