[package]
name = "nugget"
version = "1.5.1"
edition = "2024"

[[bin]]
name = "nugget"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
mlua = {version = "0.9", features = ["lua54", "vendored", "serialize"] }
tower = "0.5"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"